penambahan controller wallet
